[project]
name = "cryptopulse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.1",
    "asyncpg>=0.30.0",
    "httpx>=0.28.1",
    "mypy>=1.15.0",
    "pydantic-settings>=2.7.1",
    "ruff>=0.9.6",
    "sqlalchemy>=2.0.38",
]



###################################
#Config Linters
###################################

[tool.mypy]
ignore_missing_imports = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 120 
lint.select = ["E", "F", "W"]  
lint.ignore = ["W293", "W291"]  
exclude = []
